--- a/Nwqis/Info.plist
+++ b/Nwqis/Info.plist
@@ -16,10 +16,43 @@
 	<string>$(PRODUCT_BUNDLE_PACKAGE_TYPE)</string>
 	<key>CFBundleShortVersionString</key>
 	<string>1.0</string>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>fb2205321109768926</string>
+			</array>
+		</dict>
+	</array>
 	<key>CFBundleVersion</key>
 	<string>1</string>
+	<key>FacebookAppID</key>
+	<string>2205321109768926</string>
+	<key>FacebookDisplayName</key>
+	<string>Nwqis</string>
+	<key>LSApplicationQueriesSchemes</key>
+	<array>
+		<string>fbapi</string>
+		<string>fb-messenger-share-api</string>
+		<string>fbauth2</string>
+		<string>fbshareextension</string>
+	</array>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSAppTransportSecurity</key>
+	<dict>
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
+	</dict>
+	<key>NSCameraUsageDescription</key>
+	<string>we need to acess you camera to get photos to your request </string>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>we need your location to get the nearest  request</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>we need your location to get the nearest  request</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>we need to acess you photo library to get photos to your request </string>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
 		<key>UIApplicationSupportsMultipleScenes</key>
@@ -39,6 +72,10 @@
 			</array>
 		</dict>
 	</dict>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>remote-notification</string>
+	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
@@ -60,45 +97,5 @@
 	</array>
 	<key>UIUserInterfaceStyle</key>
 	<string>Light</string>
-	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>we need your location to get the nearest  request</string>
-	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
-	<string>we need your location to get the nearest  request</string>
-	<key>NSAppTransportSecurity</key>
-	<dict>
-		<key>NSAllowsArbitraryLoads</key>
-		<true/>
-	</dict>
-	<key>NSPhotoLibraryUsageDescription</key>
-	<string>we need to acess you photo library to get photos to your request </string>
-	<key>NSCameraUsageDescription</key>
-	<string>we need to acess you camera to get photos to your request </string>
-    
-    
-
-    <key>CFBundleURLTypes</key>
-    <array>
-      <dict>
-      <key>CFBundleURLSchemes</key>
-      <array>
-        <string>fb2205321109768926</string>
-      </array>
-      </dict>
-    </array>
-    <key>FacebookAppID</key>
-    <string>2205321109768926</string>
-    <key>FacebookDisplayName</key>
-    <string>Nwqis</string>
-    
-
-    <key>LSApplicationQueriesSchemes</key>
-    <array>
-      <string>fbapi</string>
-      <string>fb-messenger-share-api</string>
-      <string>fbauth2</string>
-      <string>fbshareextension</string>
-    </array>
-    
-    
 </dict>
 </plist>
